@@ -12,6 +12,8 @@
   * Fix capability negotiation when fetching packs over HTTP.
     (#1072461, William Grant)
 
+  * Enforce determine_wants returning an empty list rather than None. (Fabien Boucher, Jelmer Vernooij)
+
  IMPROVEMENTS
 
   * Support passing a single revision to BaseRepo.get_walker() rather than a list of revisions. 
